# pi-linux

./: MAINTAINERS  Makefile  README.md  config.org  defconfig
Documentation/devicetree/bindings/: vendor-prefixes.yaml
Documentation/sphinx/: maintainers_include.py
Documentation/trace/postprocess/: decode_msr.py
arch/arm/configs/: orangepi_defconfig  pocketbook_touch_lux_3_defconfig  tbs_a711_defconfig
arch/arm64/: Kconfig
arch/arm64/configs/: orangepi_defconfig  pinebook_pro_defconfig  pinephone_defconfig  pinephone_multidist_defconfig  pinephone_pro_defconfig  rockchip_linux_defconfig  vs640_defconfig  vs640_r_defconfig  vs640_s_defconfig  vs680_a0_defconfig  vs680_a0_r_defconfig  vs680_a0_s_defconfig  vs680_a0_ubuntu20_c06_defconfig  vs680_a0_ubuntu20_defconfig  vs680_a0_ubuntu_c02_defconfig  vs680_a0_ubuntu_c05_defconfig
arch/arm64/kernel/: smp.c
arch/ia64/scripts/: unwcheck.py
arch/x86/boot/: Makefile  video.c
drivers/: Kconfig  Makefile
drivers/bluetooth/: Kconfig  Makefile  bluetooth-lpm.c  bluetooth-rfkill.c  btrtl.c  btrtl.c.orig  hci_bcm.c  hci_h5.c  rtk_bt.c  rtk_bt.h  rtk_coex.c  rtk_coex.h  rtk_misc.c  rtk_misc.h
drivers/bus/: sunxi-rsb.c
drivers/char/: Kconfig
drivers/clk/: Kconfig  clk-conf.c  clk.c
drivers/clk/berlin/: Kconfig  Makefile  as370-clks.c  as370-pll.c  as470-clks.c  clk.c  clk.h  gate.c  vs640-clks.c  vs680-clks.c  vs680-pll.c
drivers/clk/rockchip/: clk-rk3288.c  clk-rk3399.c
drivers/clk/sunxi-ng/: Makefile  ccu-sun50i-a64.c  ccu-sun6i-rtc.c  ccu-sun8i-h3.c  sun8i-de33.c
drivers/clocksource/: arm_arch_timer.c
drivers/cpufreq/: Kconfig.arm  Makefile  cpufreq-dt-platdev.c  rockchip-cpufreq.c  sun50i-cpufreq-nvmem.c
drivers/devfreq/: Kconfig  rockchip_dmc.c
drivers/dma/: sun6i-dma.c
drivers/dma-buf/: sync_file.c
drivers/extcon/: extcon.c
drivers/firmware/: arm_scpi.c
drivers/gpio/: Kconfig  Makefile  gpio-dwapb.c  gpio-et6416.c  gpio-fxl6408.c  gpio-pca953x.c  gpio-vs680-uboot.c
drivers/gpu/drm/: drm_fb_helper.c  drm_fourcc.c  drm_gem.c  drm_gem_dma_helper.c  drm_probe_helper.c
drivers/hwmon/: Kconfig  Makefile  vs680-hwmon.c
drivers/i2c/busses/: i2c-designware-master.c  i2c-designware-platdrv.c  i2c-gpio.c  i2c-mv64xxx.c
drivers/i2c/muxes/: Kconfig  Makefile  i2c-dyndmx-pinctrl.c
drivers/iio/: industrialio-core.c
drivers/iio/accel/: bma180.c
drivers/iio/adc/: Kconfig  (+5 more)
drivers/iommu/: sun50i-iommu.c
drivers/irqchip/: Kconfig  Makefile  irq-berlin-dhub.c  irq-gic-v3-its.c  irq-gic-v3.c
drivers/leds/: Kconfig
drivers/mfd/: Kconfig  Makefile  ac200.c  axp20x-i2c.c  axp20x.c  rk808.c  rk8xx-spi.c  sunxi-ac200.c
drivers/misc/: Kconfig  Makefile  emmc_ts.c  ppkb-manager.c
drivers/nvmem/: rockchip-otp.c  sunxi_sid.c
drivers/of/: property.c
drivers/phy/: Kconfig  Makefile
drivers/pinctrl/: Kconfig
drivers/pwm/: pwm-berlin.c
drivers/regulator/: Kconfig  Makefile  axp20x-regulator.c  hl7593.c  mp886x.c  sy8824x.c  sy8827n.c  syr837_8.c  tps6286x-regulator.c
drivers/reset/: Kconfig  reset-berlin.c
drivers/rtc/: Kconfig  rtc-sun6i.c
drivers/soc/: Kconfig  Makefile
drivers/spi/: spidev.c
drivers/synap/: CMakeLists.txt
drivers/synap/common/: CMakeLists.txt
drivers/synap/common/inc/: ebg_file.h
drivers/synap/common/src/: ebg_file.c
drivers/synap/kernel/: CMakeLists.txt  Kbuild  Kconfig  build.sh  release.sh
drivers/synap/kernel/inc/uapi/: synap.h
drivers/synap/kernel/src/: generate_selinux_ioctl_defines.c  synap_kernel.c  synap_kernel.h  synap_kernel_ca.c  synap_kernel_ca.h  synap_kernel_drv.c  synap_kernel_log.h  synap_kernel_stats.c  synap_mem.c  synap_mem.h  synap_profile.c  synap_profile.h
drivers/synap/ta/inc/ca/: synap_ta_cmd.h
drivers/thermal/: rockchip_thermal.c  sun8i_thermal.c
drivers/video/: Kconfig  Makefile
firmware/bcm/: BCM43013A0_001.001.006.0045.0000.hcd  BCM4345C0_003.001.025.0132.0199.hcd  BCM4345C5_003.006.006.0037.0088.hcd  BCM4362A2_001.003.006.1051.1068.hcd  bcmdhd_43752.cal  bcmdhd_clm_43752.blob  brcmbt  bt_vendor.conf
firmware/realtek/: rtl8821cu_config  rtl8821cu_fw  rtl8822cu_fw
fs/pstore/: ram.c
include/drm/: drm_gem_dma_helper.h
include/linux/: extcon.h  flash_ts.h  ion.h  ion_heap_extra.h  phy.h  phylink.h  power_supply.h
include/media/: v4l2-ctrls.h  vc1-ctrls.h
include/sound/: soc-component.h  soc-dai.h
kernel/: panic.c
net/bluetooth/: hci_event.c  hci_sync.c
net/mac80211/: cfg.c
scripts/: bmpconvert  checkpatch.pl  clang-wrapper.py  get_dvb_firmware  jobserver-exec  mkbootimg  mkmultidtb.py  show_delta  spdxcheck.py  unpack_bootimg
scripts/kconfig/: mconf-cfg.sh
scripts/tracing/: draw_functrace.py
sound/soc/: Kconfig  Makefile  soc-component.c  soc-pcm.c  soc-utils.c
tools/hv/: lsvmbus
(+994 files in other folders)
